--- a/DataScienceProjects/readme
+++ b/DataScienceProjects/readme
@@ -1,1 +1,6 @@
+These are the .ipynb files of Online StockScreener... 
 
+StockScreener - Find the upcoming or current high-momentum stocks in the market
+
+1. Stochastic Indicator based Screnner
+2. EMA 50 retest Screener
